@startuml

!include ./_commons.style



package uutf {

  abstract class Test
  abstract class TestCase
  Test <|-- TestCase
  Test . TestRunner
  class TestRunner
  class TestFactory

}

package tests {

  class IntegerTests {
    + setUp()
    + addTwoNumers()
    + subtractTwoNumbers()
    + throwAnError()
  }


}

TestCase <|-- IntegerTests

class Main {
  + {static} main(String[])
}


IntegerTests . Main
TestRunner .. Main
TestFactory .. Main

@enduml
